# sqlai

./: .envrc  data_dictionary.csv  pyproject.toml  schema.sql
assets/: products.json  schema.sql
prompts/: fix_query.jinja2  generate_query.jinja2  nl_answer.jinja2
smartai/: cli.py  ui.py
smartai/llm/: oai.py  ollama.py
smartai/tools/: sqlprocessor.py
sqlai/: cli.py  database.py  ui.py
sqlai/llm/: ollama.py
