[tool.poetry]
name = "smartai"
version = "0.1.0"
description = "Smart AI Package with all tools required for building smart AI"
authors = ["Anirudh Aggarwal <ani.aggarwal@mail.utoronto.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.3.7"
tiktoken = "^0.5.2"
httpx = "^0.25.2"
pandas = "^2.1.4"
jinja2 = "^3.1.2"
streamlit = "^1.29.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
